# OXX-IOT-SYSTEM-MONITORING

./: .replit  README.md  app.py  pi_service.py  pyproject.toml
.config/pulse/: cookie
attached_assets/: Pasted-from-flask-import-Flask-render-template-string-import-os-from-gpiozero-import-OutputDevice-from--1750149890337_1750149890337.txt
templates/: dashboard.html
