[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gpiozero>=2.0.1",
    "gunicorn>=23.0.0",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.98",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "sendgrid>=6.12.4",
    "speechrecognition>=3.14.3",
]
